--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="content">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <img src="images/transportation/transit.jpg" alt="Future of Transportation">
+      <img src="images/transportation/transit.jpg" alt="Modern Transportation">
       
     </div>
   </div>
